--- a/default/Git-clone-authentication-failed/index.html
+++ b/default/Git-clone-authentication-failed/index.html
@@ -64,29 +64,25 @@
 
       <div class="content">
         <div class="page-header">
-  <h1>Git clone authentication failed </h1>
+  <h1 style="margin-bottom: 10px;">Git clone authentication failed </h1>
+  <span><a href="/about">By Lan Chen</a> <a class="inactiveLink"> / 2019-05-07</a></span><br /><br />
 </div>
 
 <div class="row">
-  <div class="span8">
-    <p><br>
-<strong>Description:</strong>  <br>
-Use “git clone my_repository_url” to clone a project form remote to local in Windows 10 Pro’s Terminal.</p>
-
-<p><strong>Result:</strong><br />
-I’ve got an “Authentication failed” error.</p>
+  <div class="span10">
+    <p>I’ve got an “Authentication failed” error when I use “git clone my_repository_url” to clone a project form remote to local in Windows 10 Pro’s Terminal.<br><br></p>
 
 <p><strong>Reason:</strong><br />
 Git didn’t ask me to input my username and password for this repository, just simply show a failed error. And there are no credential details about this repository in windows credential manager.</p>
 
-<p>There are many ways to solve this problem, I’ve tried the following 2 methods:</p>
+<p>There are many ways to solve this problem, I’ve tried the following 2 methods:<br><br></p>
 
 <ol>
 <li>use GitHub desktop to clone this project, it will auto pop-up a window remind you to input username and password. This method works for this problem.
 <br><br></li>
 <li>manually add git authentication to windows credential manager:
 <br>
-open Credential Manager</li>
+open Credential Manager<br><br></li>
 </ol>
 
 <p><img src="/assets/media/2019-05-07-Authentication-failed-when-using-git-cloning-repository/1.png" alt="" width="300"></p>
@@ -135,7 +131,7 @@ input your repository server URL, username, and password (<strong>Note:</strong>
     
   </div>
   
-  <div class="span4">
+  <div class="span2">
     <h4>Published</h4>
     <div class="date"><span>2019-05-07</span></div>
     <br>
