--- a/default/How-to-make-the-native-scrollbar-thinner-in-Google-Chrome/index.html
+++ b/default/How-to-make-the-native-scrollbar-thinner-in-Google-Chrome/index.html
@@ -64,14 +64,13 @@
 
       <div class="content">
         <div class="page-header">
-  <h1>How to make the native scrollbar thinner in Google Chrome </h1>
+  <h1 style="margin-bottom: 10px;">How to make the native scrollbar thinner in Google Chrome </h1>
+  <span><a href="/about">By Lan Chen</a> <a class="inactiveLink"> / 2019-05-06</a></span><br /><br />
 </div>
 
 <div class="row">
-  <div class="span8">
-    <p><br>
-<strong>Description:</strong>  <br>
-Add a native scrollbar to the project and make the scrollbar thinner.</p>
+  <div class="span10">
+    <p>Add a native scrollbar to the project and make the scrollbar thinner.</p>
 
 <p>Most people knew how to add a scrollbar to your pages when the content of an element is too big to fit in the specified area. So, I will just give a brief introduction to CSS <strong>overflow</strong> property. <strong>overflow</strong> property has the following values:  <br><br></p>
 
@@ -140,7 +139,7 @@ Any feedback is welcome! :)  <br><br></p>
     
   </div>
   
-  <div class="span4">
+  <div class="span2">
     <h4>Published</h4>
     <div class="date"><span>2019-05-06</span></div>
     <br>
