--- a/default/Tips-for-SPA-optimization---Vue.js/index.html
+++ b/default/Tips-for-SPA-optimization---Vue.js/index.html
@@ -64,18 +64,15 @@
 
       <div class="content">
         <div class="page-header">
-  <h1>Tips for SPA optimization - Vue.js </h1>
+  <h1 style="margin-bottom: 10px;">Tips for SPA optimization - Vue.js </h1>
+  <span><a href="/about">By Lan Chen</a> <a class="inactiveLink"> / 2019-06-23</a></span><br /><br />
 </div>
 
 <div class="row">
-  <div class="span8">
-    <p><br>
-<strong>description:</strong> <br></p>
+  <div class="span10">
+    <p>Useful tips for Vue.js Single Page Application optimization, <a href="https://medium.com/binarcode/tips-for-building-fast-and-light-vue-js-spa-7a83407d4bc3">Tips for building fast and light Vue.js SPA</a></p>
 
-<p>Useful tips for Vue.js Single Page Application optimization, <a href="https://medium.com/binarcode/tips-for-building-fast-and-light-vue-js-spa-7a83407d4bc3">Tips for building fast and light Vue.js SPA</a></p>
-
-<p><strong>Note:</strong> for people who fist visit medium.com, you might have to login with a google or facebook account, and re-click the link.
-<br><br></p>
+<p><strong>Note:</strong> for people who fist visit medium.com, you might have to login with a google or facebook account, and re-click the link.</p>
 
     <hr>
     <div class="pagination">
@@ -99,7 +96,7 @@
     
   </div>
   
-  <div class="span4">
+  <div class="span2">
     <h4>Published</h4>
     <div class="date"><span>2019-06-23</span></div>
     <br>
