--- a/default/Use-Visual-Studio-connect-a-remote-project/index.html
+++ b/default/Use-Visual-Studio-connect-a-remote-project/index.html
@@ -64,14 +64,13 @@
 
       <div class="content">
         <div class="page-header">
-  <h1>Use Visual Studio connect a remote project </h1>
+  <h1 style="margin-bottom: 10px;">Use Visual Studio connect a remote project </h1>
+  <span><a href="/about">By Lan Chen</a> <a class="inactiveLink"> / 2019-05-10</a></span><br /><br />
 </div>
 
 <div class="row">
-  <div class="span8">
-    <p><br>
-<strong>Description:</strong>  <br>
-Use Visual Studio &amp; server URL to connect all your remote projects from the same server (the one you have access permission).<br />
+  <div class="span10">
+    <p>Use Visual Studio &amp; server URL to connect all your remote projects from the same server (the one you have access permission).<br />
 <br></p>
 
 <ol>
@@ -124,7 +123,7 @@ Any feedback is welcome! :)  <br><br></p>
     
   </div>
   
-  <div class="span4">
+  <div class="span2">
     <h4>Published</h4>
     <div class="date"><span>2019-05-10</span></div>
     <br>
