--- a/default/Git-notes/index.html
+++ b/default/Git-notes/index.html
@@ -64,14 +64,13 @@
 
       <div class="content">
         <div class="page-header">
-  <h1>Git notes </h1>
+  <h1 style="margin-bottom: 10px;">Git notes </h1>
+  <span><a href="/about">By Lan Chen</a> <a class="inactiveLink"> / 2019-06-17</a></span><br /><br />
 </div>
 
 <div class="row">
-  <div class="span8">
-    <p><br>
-<strong>description:</strong><br>
-These are my personal git notes for my daily life.<br><br></p>
+  <div class="span10">
+    <p>These are my personal git notes for my daily life.<br><br></p>
 
 <p><code>git status</code>
 check file status <br><br></p>
@@ -163,7 +162,7 @@ merge branch (<strong>Note</strong> the BranchName should be the one your want f
     
   </div>
   
-  <div class="span4">
+  <div class="span2">
     <h4>Published</h4>
     <div class="date"><span>2019-06-17</span></div>
     <br>
