--- a/default/React-Uncaught-Invariant-Violation/index.html
+++ b/default/React-Uncaught-Invariant-Violation/index.html
@@ -64,14 +64,13 @@
 
       <div class="content">
         <div class="page-header">
-  <h1>React Uncaught Invariant Violation </h1>
+  <h1 style="margin-bottom: 10px;">React Uncaught Invariant Violation </h1>
+  <span><a href="/about">By Lan Chen</a> <a class="inactiveLink"> / 2019-06-03</a></span><br /><br />
 </div>
 
 <div class="row">
-  <div class="span8">
-    <p><br>
-<strong>Description:</strong><br />
-While rendering a list data, I got an error: ‘react-dom.development.js:55 Uncaught Invariant Violation: Objects are not valid as a React child(found: object with keys {id, typeId, reference, …..}). If you meant to render a collection of children, use an array instead.’
+  <div class="span10">
+    <p>While rendering a list data, I got an error: ‘react-dom.development.js:55 Uncaught Invariant Violation: Objects are not valid as a React child(found: object with keys {id, typeId, reference, …..}). If you meant to render a collection of children, use an array instead.’
 <br><br></p>
 
 <p>I used React Hooks to fetch data and ‘antd’ version 3.13 as my UI library, List and List.Item are supported by antd. I want to see the raw data so I just simply use a div tag to render the data, but I got an error from the code showing below<br><br>
@@ -89,7 +88,7 @@ While rendering a list data, I got an error: ‘react-dom.development.js:55 Unca
 <p><img src="/assets/media/2019-06-03-React-Uncaught-Invariant-Violation/3.png" alt="" width="600">
 <br><br></p>
 
-<p>Here is the outcome
+<p>Here is the outcome<br>
 <img src="/assets/media/2019-06-03-React-Uncaught-Invariant-Violation/4.png" alt="" width="600">
 <br><br></p>
 
@@ -117,7 +116,7 @@ While rendering a list data, I got an error: ‘react-dom.development.js:55 Unca
     
   </div>
   
-  <div class="span4">
+  <div class="span2">
     <h4>Published</h4>
     <div class="date"><span>2019-06-03</span></div>
     <br>
