--- a/default/Three-ways-to-break-a-long-word-in-a-small-container/index.html
+++ b/default/Three-ways-to-break-a-long-word-in-a-small-container/index.html
@@ -64,14 +64,13 @@
 
       <div class="content">
         <div class="page-header">
-  <h1>Three ways to break a long word in a small container </h1>
+  <h1 style="margin-bottom: 10px;">Three ways to break a long word in a small container </h1>
+  <span><a href="/about">By Lan Chen</a> <a class="inactiveLink"> / 2019-06-10</a></span><br /><br />
 </div>
 
 <div class="row">
-  <div class="span8">
-    <p><br>
-<strong>Description:</strong>  <br>
-I met a problem when I fetch data from the database for a table, there is an unusual long string text inside the data, and the table column has a relative width so the data just stretched the  column. I found 3 ways to break an unusual long word in a relatively small container, there are,
+  <div class="span10">
+    <p>I met a problem when I fetch data from the database for a table, there is an unusual long string text inside the data, and the table column has a relative width so the data just stretched the  column. I found 3 ways to break an unusual long word in a relatively small container, there are,
  <code>
  word-wrap:break-word;  word-break: break-all; &amp; overflow-wrap: break-word;
 </code></p>
@@ -159,7 +158,7 @@ Any feedback is welcome! :)  <br><br></p>
     
   </div>
   
-  <div class="span4">
+  <div class="span2">
     <h4>Published</h4>
     <div class="date"><span>2019-06-10</span></div>
     <br>
