--- a/default/app.model--namespace-should-be-unique/index.html
+++ b/default/app.model--namespace-should-be-unique/index.html
@@ -64,14 +64,13 @@
 
       <div class="content">
         <div class="page-header">
-  <h1>app.model: namespace should be unique </h1>
+  <h1 style="margin-bottom: 10px;">app.model: namespace should be unique </h1>
+  <span><a href="/about">By Lan Chen</a> <a class="inactiveLink"> / 2019-06-17</a></span><br /><br />
 </div>
 
 <div class="row">
-  <div class="span8">
-    <p><br>
-<strong>Description:</strong><br />
-I am working on a react project this morning, and I found I need a new model file for a future function so I just simply copy the other exist model file and rename it. Then, the error shows:
+  <div class="span10">
+    <p>I am working on a react project this morning, and I found I need a new model file for a future function so I just simply copy the other exist model file and rename it. Then, the error shows:
 <strong>app.model: namespace should be unique</strong>, the error showing as follows: <br><br></p>
 
 <p><img src="/assets/media/2019-06-17-React-app-model---namespace-should-be-unique/1.png" alt="" width="800">
@@ -116,7 +115,7 @@ If you want to save some energy for this problem, you can just ignore ‘namespa
     
   </div>
   
-  <div class="span4">
+  <div class="span2">
     <h4>Published</h4>
     <div class="date"><span>2019-06-17</span></div>
     <br>
