--- a/default/Git-clone-authentication-failed/index.html
+++ b/default/Git-clone-authentication-failed/index.html
@@ -107,7 +107,7 @@ input your repository server URL, username, and password (<strong>Note:</strong>
 
 <p>After adding this generic credential, you don’t have to input the username &amp; password for all repositories form this server.<br><br></p>
 
-<p>Any feedback is welcome! :)  <br><br></p>
+<p>Any feedback is welcome! :-)  <br><br></p>
 
     <hr>
     <div class="pagination">
@@ -139,7 +139,7 @@ input your repository server URL, username, and password (<strong>Note:</strong>
     <ul class="tag_box">
     
       <li>
-  <a href="/categories/#default-ref">default <span>9</span></a>
+  <a href="/categories/#default-ref">default <span>10</span></a>
 </li>
     
     </ul>
