--- a/default/How-to-make-the-native-scrollbar-thinner-in-Google-Chrome/index.html
+++ b/default/How-to-make-the-native-scrollbar-thinner-in-Google-Chrome/index.html
@@ -108,7 +108,7 @@ Following code shows another way to set the scrollbar thinner in Google Chrome:<
 </code></pre>
 
 <p><br><br>
-Any feedback is welcome! :)  <br><br></p>
+Any feedback is welcome! :-)  <br><br></p>
 
 <h4>References</h4>
 
@@ -147,7 +147,7 @@ Any feedback is welcome! :)  <br><br></p>
     <ul class="tag_box">
     
       <li>
-  <a href="/categories/#default-ref">default <span>9</span></a>
+  <a href="/categories/#default-ref">default <span>10</span></a>
 </li>
     
     </ul>
