--- a/default/Three-ways-to-break-a-long-word-in-a-small-container/index.html
+++ b/default/Three-ways-to-break-a-long-word-in-a-small-container/index.html
@@ -126,7 +126,7 @@ p.c {
 
 <p><img src="/assets/media/2019-06-10-Three-ways-to-break-a-long-word-in-a-small-container/1.png" alt="" width="600">
  <br><br>
-Any feedback is welcome! :)  <br><br></p>
+Any feedback is welcome! :-)  <br><br></p>
 
 <h4>References</h4>
 
@@ -166,7 +166,7 @@ Any feedback is welcome! :)  <br><br></p>
     <ul class="tag_box">
     
       <li>
-  <a href="/categories/#default-ref">default <span>9</span></a>
+  <a href="/categories/#default-ref">default <span>10</span></a>
 </li>
     
     </ul>
