--- a/default/app.model--namespace-should-be-unique/index.html
+++ b/default/app.model--namespace-should-be-unique/index.html
@@ -64,7 +64,7 @@
 
       <div class="content">
         <div class="page-header">
-  <h1 style="margin-bottom: 10px;">app.model: namespace should be unique </h1>
+  <h1 style="margin-bottom: 10px;">App.model: namespace should be unique </h1>
   <span><a href="/about">By Lan Chen</a> <a class="inactiveLink"> / 2019-06-17</a></span><br /><br />
 </div>
 
