--- a/default/deploy-website-to-AWS-via-visual-studio/index.html
+++ b/default/deploy-website-to-AWS-via-visual-studio/index.html
@@ -64,7 +64,7 @@
 
       <div class="content">
         <div class="page-header">
-  <h1 style="margin-bottom: 10px;">deploy website to AWS via visual studio </h1>
+  <h1 style="margin-bottom: 10px;">Deploy website to AWS via visual studio </h1>
   <span><a href="/about">By Lan Chen</a> <a class="inactiveLink"> / 2019-06-28</a></span><br /><br />
 </div>
 
