update post title

--- a/default/app.model--namespace-should-be-unique/index.html
+++ b/default/app.model--namespace-should-be-unique/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>app.model: namespace should be unique</title>
+    <title>App.model: namespace should be unique</title>
   
     <meta name="author" content="Lan Chen">
 
