--- a/default/deploy-website-to-AWS-via-visual-studio/index.html
+++ b/default/deploy-website-to-AWS-via-visual-studio/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>deploy website to AWS via visual studio</title>
+    <title>Deploy website to AWS via visual studio</title>
   
     <meta name="author" content="Lan Chen">
 
