--- a/default/Git-notes/index.html
+++ b/default/Git-notes/index.html
@@ -218,7 +218,7 @@ merge branch (<strong>Note</strong> the BranchName should be the one your want f
   var _gaq = _gaq || [];
   var pluginUrl = '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
   _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
-  _gaq.push(['_setAccount', 'UA-123-12']);
+  _gaq.push(['_setAccount', 'UA-143173161-1']);
   _gaq.push(['_trackPageview']);
 
   (function() {
