--- a/default/app.model--namespace-should-be-unique/index.html
+++ b/default/app.model--namespace-should-be-unique/index.html
@@ -167,7 +167,7 @@ If you want to save some energy for this problem, you can just ignore ‘namespa
   var _gaq = _gaq || [];
   var pluginUrl = '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
   _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
-  _gaq.push(['_setAccount', 'UA-123-12']);
+  _gaq.push(['_setAccount', 'UA-143173161-1']);
   _gaq.push(['_trackPageview']);
 
   (function() {
