--- a/default/deploy-website-to-AWS-via-visual-studio/index.html
+++ b/default/deploy-website-to-AWS-via-visual-studio/index.html
@@ -279,7 +279,7 @@ Right click on your project, select ‘Publish to AWS Elastic Beanstalk’…<br
   var _gaq = _gaq || [];
   var pluginUrl = '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
   _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
-  _gaq.push(['_setAccount', 'UA-123-12']);
+  _gaq.push(['_setAccount', 'UA-143173161-1']);
   _gaq.push(['_trackPageview']);
 
   (function() {
