--- a/pages/index.html
+++ b/pages/index.html
@@ -76,6 +76,20 @@
   
 
 
+  <li><a href="/about">About me</a></li>
+
+
+
+  
+
+
+  <li><a href="/archive">Archive</a></li>
+
+
+
+  
+
+
   <li><a href="/categories">Categories</a></li>
 
 
@@ -98,20 +112,6 @@
 
 
   <li><a href="/tags">Tags</a></li>
-
-
-
-  
-
-
-  <li><a href="/about">About me</a></li>
-
-
-
-  
-
-
-  <li><a href="/archive">Archive</a></li>
 
 
 
@@ -147,7 +147,7 @@
   var _gaq = _gaq || [];
   var pluginUrl = '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
   _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
-  _gaq.push(['_setAccount', 'UA-123-12']);
+  _gaq.push(['_setAccount', 'UA-143173161-1']);
   _gaq.push(['_trackPageview']);
 
   (function() {
