--- a/default/Tips-for-SPA-optimization---Vue.js/index.html
+++ b/default/Tips-for-SPA-optimization---Vue.js/index.html
@@ -72,7 +72,7 @@
   <div class="span10">
     <p>Useful tips for Vue.js Single Page Application optimization, <a href="https://medium.com/binarcode/tips-for-building-fast-and-light-vue-js-spa-7a83407d4bc3">Tips for building fast and light Vue.js SPA</a></p>
 
-<p><strong>Note:</strong> for people who fist visit medium.com, you might have to login with a google or facebook account, and re-click the link.</p>
+<p><strong>Note:</strong> for people who fist visit medium.com, you might have to login with a google or facebook account, and re-click the link.<br><br></p>
 
 <p>Any feedback is welcome! :-)  <br><br></p>
 
@@ -106,7 +106,7 @@
     <ul class="tag_box">
     
       <li>
-  <a href="/categories/#default-ref">default <span>10</span></a>
+  <a href="/categories/#default-ref">default <span>11</span></a>
 </li>
     
     </ul>
