--- a/default/Eslint-setting-allow-variables-start-with-underscore/index.html
+++ b/default/Eslint-setting-allow-variables-start-with-underscore/index.html
@@ -87,7 +87,7 @@ Any feedback is welcome! :-)  <br><br></p>
 <h4>References</h4>
 
 <ul>
-<li><p><a href="https://eslint.org/docs/rules/no-underscore-dangle#disallow-dangling-underscores-in-identifiers-no-underscore-dangle">disallow dangling underscores in identifiers (no-underscore-dangle)</a></p></li>
+<li><p><a href="https://eslint.org/docs/rules/no-underscore-dangle#disallow-dangling-underscores-in-identifiers-no-underscore-dangle">Disallow dangling underscores in identifiers (no-underscore-dangle)</a></p></li>
 
 <li><p><a href="https://eslint.org/docs/rules/no-unused-vars">Disallow Unused Variables (no-unused-vars)</a></p></li>
 </ul>
