--- a/default/Three-ways-to-break-a-long-word-in-a-small-container/index.html
+++ b/default/Three-ways-to-break-a-long-word-in-a-small-container/index.html
@@ -70,10 +70,10 @@
 
 <div class="row">
   <div class="span10">
-    <p>I met a problem when I fetch data from the database for a table, there is an unusual long string text inside the data, and the table column has a relative width so the data just stretched the  column. I found 3 ways to break an unusual long word in a relatively small container, there are,
- <code>
- word-wrap:break-word;  word-break: break-all; &amp; overflow-wrap: break-word;
-</code></p>
+    <p>I met a problem when I fetch data from the database for a table, there is an unusual long string text inside the data, and the table column has a relative width so the data just stretched the  column. I found 3 ways to break an unusual long word in a relatively small container, there are,</p>
+
+<pre><code> word-wrap:break-word;  word-break: break-all; &amp; overflow-wrap: break-word;
+</code></pre>
 
 <p>Here is the sample code for these three properties,</p>
 
