--- a/default/Git-notes/index.html
+++ b/default/Git-notes/index.html
@@ -145,6 +145,9 @@ delete named branch<br><br></p>
 <p><code>git push origin --delete YourRemoteBranchName</code>
 delete named remote branch<br><br></p>
 
+<p><code>git push -u origin YourLocalBranchName</code>
+push a local branch to remote repository <br><br></p>
+
 <p><code>git merge BranchName</code>
 merge branch (<strong>Note</strong> the BranchName should be the one your want fetch data from and your current branch should be the one you want get more data)<br><br></p>
 
