--- a/default/Git-notes/index.html
+++ b/default/Git-notes/index.html
@@ -85,7 +85,7 @@ add the file you name it. <br><br></p>
 add all files you has modified. <br><br></p>
 
 <p><code>git commit -m &quot;your comment for this commit&quot;</code>
-commit the changes you have added and add a comment for this change ad the same time. (<strong>Note:</strong> If you miss &lsquo;-m&rsquo;, it will open a VIM file for you to add comment for this commit after this command) <br><br></p>
+commit the changes you have added and add a comment for this change at the same time. (<strong>Note:</strong> If you miss &lsquo;-m&rsquo;, it will open a VIM file for you to add comment for this commit after this command) <br><br></p>
 
 <p><code>git pull</code>
 pull code from remote repository (<strong>Note:</strong> to avoid overwrite code in remote repository, it is better to use &lsquo;git pull&rsquo; before every &lsquo;git push&rsquo; )<br><br></p>
