update personal info

--- a/about/index.html
+++ b/about/index.html
@@ -145,7 +145,7 @@
               <p style="color: rgba(0, 162, 255, 0.589); margin-top: 5%; font-size: 2.3em;"><a
                   href="https://www.aimyplus.com/" target="_blank">Central Station Software</a></p>
               <p style="margin-top: 0.3em; color: yellowgreen; font-size: 1.5em;">Software Developer Intern, Dec. 2018 -
-                Current</p>
+                Aug. 2019</p>
               <p style="font-weight: bold; opacity: 0.6; font-size: 1.5em; "> Auckland, New Zealand</p>
               <p style="margin-top: 0.3em; line-height: 18pt; font-size: 1.1em; opacity: 0.8;;">Aimy.io is an industry
                 leading company that provide cloud-based software management solutions to childcare centres.
@@ -162,8 +162,8 @@
             <div style="display: flex; flex-direction: column; margin-left: 2em; width: 70%;">
               <p style="color: rgba(0, 162, 255, 0.589); margin-top: 5%; font-size: 2.3em;"><a
                   href="https://www.unitec.ac.nz/" target="_blank">Unitec Institute of Technology </a></p>
-              <p style="margin-top: 0.3em; color: yellowgreen; font-size: 1.5em;">Graduate Diploma in Computing , Jun.
-                2014 - Otc. 2014</p>
+              <p style="margin-top: 0.3em; color: yellowgreen; font-size: 1.5em;">Graduate Diploma in Computing , Jul.
+                2017 - Jul. 2018</p>
               <p style="font-weight: bold; opacity: 0.6; font-size: 1.5em;"> Auckland, New Zealand</p>
               <p style="margin-top: 0.3em;">Average grade: A-</p>
             </div>
@@ -171,10 +171,11 @@
 
 
           <!-- three w -->
+          <!--
           <div style="display: flex; width: 100%; height: 200px; margin: 3em 0 3em 0;">
             <img src="../assets/media/about/mi.png" style="width:30%;  border-radius: 2em;" height="100%"
               alt="XiaoMi" />
-            <!-- </div> -->
+           
 
             <div style="display: flex; flex-direction: column; margin-left: 2em; width: 70%;">
               <p style="color: rgba(0, 162, 255, 0.589); margin-top: 5%; font-size: 2.3em;"><a
@@ -190,7 +191,7 @@
                 info management, industry hot news, weekly data report. </p>
             </div>
           </div>
-
+-->
 
           <!-- four -->
           <div style="display: flex; width: 100%; height: 200px; margin: 3em 0 3em 0;">
