blog for missing content type in windows

--- a/about/index.html
+++ b/about/index.html
@@ -60,7 +60,7 @@
               
 
 
-  <li><a href="/tags">Tags</a></li>
+  <!-- <li><a href="/tags">Tags</a></li> -->
 
 
             
@@ -126,7 +126,7 @@
             <p style="margin-top: 0.3em; color: yellowgreen; font-size: 1.5em;">Developer, Sep. 2019 - Current</p>
             <p style="font-weight: bold; opacity: 0.6; font-size: 1.5em; "> Wellington, New Zealand</p>
             <p style="margin-top: 0.3em; line-height: 18pt; font-size: 1.1em; opacity: 0.8;;">Timely is the worlds smartest booking software. 
-              Offering effortlessly manage business appointments, clients, sales, staff, stock, reporting & more! Main technology we're using: React.js, ASP.NET and SQL. </p>
+              Effortlessly manage appointments, clients, sales, staff, stock, reporting & more! Main technologies we're using: React.js, ASP.NET and SQL. </p>
           </div>
         </div>
           <!-- two -->
