update personal info

--- a/about/index.html
+++ b/about/index.html
@@ -92,12 +92,12 @@
             <p style="color: white; margin-top: 95px; align-self: center; font-size:3em;">Lan Chen</p>
             <p style="color: white; margin-top: 25px; font-size:1.6em;">Developer at Timely Appointment Software</p>
             <div style="display: flex; justify-content: center; margin-top: 25px;">
-              <a href="https://github.com/coderivy" target="_blank"> <img src="../assets/media/about/github.png"
+              <a href="https://github.com/lantoday" target="_blank"> <img src="../assets/media/about/github.png"
                   style="width:25px; height: 25px; margin-right: 20px;" alt="Github" /></a>
-              <a href="https://www.linkedin.com/in/coderivy/" target="_blank"> <img
+              <a href="https://www.linkedin.com/in/lantoday/" target="_blank"> <img
                   src="../assets/media/about/linkin.jpg" style="width:25px; height: 25px;  margin-right: 20px;"
                   alt="Linkin" /></a>
-              <a href="mailto:coderivy@gmail.com" target="_blank"> <img src="../assets/media/about/email.png"
+              <a href="mailto:lanchen.it@gmail.com" target="_blank"> <img src="../assets/media/about/email.png"
                   style="width:25px; height: 25px;" alt="Email" /></a>
             </div>
           </div>
