--- a/about/index.html
+++ b/about/index.html
@@ -122,7 +122,7 @@
 
           <div style="display: flex; flex-direction: column; margin-left: 2em; width: 70%;">
             <p style="color: rgba(0, 162, 255, 0.589); margin-top: 5%; font-size: 2.3em;"><a
-                href="https://www.aimyplus.com/" target="_blank">Timely Appointment Software</a></p>
+                href="https://www.gettimely.com/" target="_blank">Timely Appointment Software</a></p>
             <p style="margin-top: 0.3em; color: yellowgreen; font-size: 1.5em;">Developer, Sep. 2019 - Current</p>
             <p style="font-weight: bold; opacity: 0.6; font-size: 1.5em; "> Wellington, New Zealand</p>
             <p style="margin-top: 0.3em; line-height: 18pt; font-size: 1.1em; opacity: 0.8;;">Timely is the worlds smartest booking software. 
